--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -9,9 +9,18 @@
     </head>
     <body>
         <div class="page-header">
-            <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-            <h1><a href="/">Django Girls Blog</a></h1>
+           <h1><a href="/">Django Girls Blog</a>
+               {% if user.is_authenticated %}
+                 <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+                 <a href="{% url 'pessoa_detail' %}" class="top-menu">Meus dados</a>
+               {% elif user.is_anonymous %}
+                 <a href="{% url 'pessoanew' %} "  class="top-menu">Adicionar</span></a>
+               {% endif %}
+
+           </h1>
         </div>
+
+
         <div class="content container">
             <div class="row">
                 <div class="col-md-8">
