--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -7,8 +7,12 @@
                  {{ post.published_date }}
              </div>
          {% endif %}
-         <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
-         <a class="btn btn-default"  href="{% url 'post_delete' pk=post.pk %}" onclick=" return confirm('Confirma a exclusão do Post?');"><span class="glyphicon glyphicon-trash"></span></a>
+
+         {% if user.is_authenticated %}
+             <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+             <a class="btn btn-default"  href="{% url 'post_delete' pk=post.pk %}" onclick=" return confirm('Confirma a exclusão do Post?');"><span class="glyphicon glyphicon-trash"></span></a>
+         {% endif %}
+
          <h1>{{ post.title }}</h1>
          <p>{{ post.text|linebreaksbr }}</p>
 
