--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,4 +1,4 @@
-{% load staticfiles %}
+{% load static %}
 <html>
     <head>
         <title>Django Girls blog</title>
@@ -7,8 +7,15 @@
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
     </head>
     <body>
-        <div>
-            <h1><a href="/">Django Girls Blog</a></h1>
+        <div class="page-header">
+            <h1><a href="/">Django Girls Blog</a>
+            {% if user.is_authenticated %}
+                <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+                   <a href="{% url 'pessoa_detail' %}" class="top-menu">Meus dados</a>
+               {% elif user.is_anonymous %}
+                 <a href="{% url 'pessoanew' %}"  class="top-menu">Adicionar</span></a>
+                {% endif %}
+            </h1>
         </div>
 
         <div class="content container">
